# AI_Worker_HC_mission_a_teleop

./: .gitignore  README.md  pyrightconfig.json
ai_worker/: .gitignore  README.md
ai_worker/ffw_joystick_controller/: CMakeLists.txt  joystick_plugin.xml
ai_worker/ffw_joystick_controller/include/joystick_controller/: visibility_control.h
ai_worker/ffw_joystick_controller/src/: joystick_controller.cpp  joystick_controller_parameters.yaml
ai_worker/ffw_navigation/: CMakeLists.txt
ai_worker/ffw_navigation/config/: mapper_params_online_sync.yaml  navigation.yaml  navigation_mppi.yaml
ai_worker/ffw_navigation/config/bt/: nav_modes.xml
ai_worker/ffw_navigation/include/ffw_navigation/: is_path_length_under.hpp
ai_worker/ffw_navigation/launch/: online_sync_launch.py
ai_worker/ffw_navigation/rviz/: mapping.rviz  navigation.rviz
ai_worker/ffw_navigation/src/: is_path_length_under.cpp
ai_worker/ffw_robot_manager/: CMakeLists.txt  ffw_robot_manager_plugin.xml
ai_worker/ffw_robot_manager/include/ffw_robot_manager/: battery_model.hpp  ffw_robot_manager.hpp  topic_watchdog.hpp  ubetter_battery_model.hpp
ai_worker/ffw_robot_manager/src/: battery_model.cpp  ffw_robot_manager.cpp  ffw_robot_manager_parameters.yaml  ubetter_battery_model.cpp
humanoid_challenge/mission/: README.md  package.xml  setup.cfg  setup.py
humanoid_challenge/mission/config/: mission_d.yaml  mission_d_smoke.yaml  mock_manipulation_d.yaml  mock_navigation_d.yaml  mock_perception_d.yaml
humanoid_challenge/mission/launch/: integration_demo.launch.py  mission_a.launch.py  mission_a_real.launch.py  mission_b.launch.py  mission_b_b1.launch.py  mission_b_b2.launch.py  mission_b_b3.launch.py  mission_b_dryrun.launch.py  mission_c.launch.py  mission_c_real.launch.py  mission_d.launch.py  move_base_lateral.launch.py
humanoid_challenge/mission/mission/: mission_a.py  mission_b.py  mission_b_monitor.py  mission_b_monitor_demo.py  mission_c.py  mission_d.py  mock_manipulation_a.py  mock_manipulation_d.py  mock_nav_b.py  mock_navigation_a.py  mock_navigation_d.py  mock_perception_a.py  mock_perception_d.py  move_base_lateral_node.py  sim_driver.py  task_list.py
humanoid_challenge/mission_interfaces/: CMakeLists.txt  package.xml
humanoid_challenge/mission_interfaces/action/: MissionDManipulation.action  MoveToScanPose.action
humanoid_challenge/mission_interfaces/msg/: Detection2D.msg  TaskItem.msg
humanoid_challenge/mission_interfaces/srv/: GetTaskList.srv  GetTrayDetections.srv  MoveBaseLateral.srv  MoveBaseRelative.srv
humanoid_challenge/navigation/ffw_mission_b_nav/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
humanoid_challenge/navigation/ffw_mission_b_nav/config/: mission_b_real_robot.yaml
humanoid_challenge/navigation/ffw_mission_b_nav/docs/: MISSION_B_SYSTEM_INTEGRATION.md
humanoid_challenge/navigation/ffw_mission_b_nav/ffw_mission_b_nav/: sg2_mission_b_route.py  sg2_mission_b_system_nav.py
humanoid_challenge/navigation/ffw_mission_b_nav/launch/: mission_b_system_nav.launch.py
humanoid_challenge/perception/: CMakeLists.txt  package.xml
humanoid_challenge/perception/config/head_pipe/: params.yaml
humanoid_challenge/perception/config/part_detector/: bolt_hole_params.yaml  bolt_top_params.yaml  drill_params.yaml  green_button_params.yaml  nut_params.yaml  params.yaml  peg_params.yaml  pipe_params.yaml  wheel_hole_params.yaml
humanoid_challenge/perception/config/wrist_pipe/: params.yaml
humanoid_challenge/perception/docs/: head_projection.md  monitor_ocr.md  part_detector.md  wrist_projection.md
humanoid_challenge/perception/launch/: bolt_hole_detector.launch.py  bolt_top_detector.launch.py  bolt_top_detector_mock.launch.py  drill_detector.launch.py  green_button_detector.launch.py  head_all.launch.py  head_grasp_pcd.launch.py  head_pipe_pipeline.launch.py  head_pipe_top_centers.launch.py  head_pointcloud.launch.py  head_projection.launch.py  manipulation_mock.launch.py  monitor_ocr.launch.py  monitor_ocr_a.launch.py  monitor_ocr_a_node.launch.py  nut_detector.launch.py  part_detector.launch.py  part_detectors_all.launch.py  peg_detector.launch.py  perception_live.launch.py  pipe_2d_to_3d_wrist.launch.py  pipe_detector.launch.py  task_management.launch.py  tray_occupancy.launch.py  wheel_hole_detector.launch.py  wrist_all.launch.py  wrist_bolt_hole_center.launch.py  wrist_bolt_top_center.launch.py  wrist_drill_endpoint.launch.py  wrist_grasp_pcd.launch.py  wrist_green_button_center.launch.py  wrist_perception_wrist_targets.launch.py  wrist_pipe_top_centers.launch.py  wrist_pointcloud.launch.py  wrist_projection.launch.py  wrist_task_grasp_planner.launch.py  wrist_wheel_hole_center.launch.py  wrist_wrist_targets_all.launch.py  zed_bolt_hole_center.launch.py  zed_bolt_top_center.launch.py  (+4 more)
humanoid_challenge/perception/monitor_images_for_yolo/: metadata.csv
humanoid_challenge/perception/msg/: PartDetectionArray.msg
humanoid_challenge/perception/tools/: debug_roi.py  monitor_ocr_deploy.sh  run_monitor_ocr.sh  save_right_wrist_base_pose.py  save_wrist_target_pairs.py  save_zed_rgb_100.py
physical_ai_tools/physical_ai_bt/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
physical_ai_tools/physical_ai_bt/physical_ai_bt/: __init__.py  blackboard.py  bt_core.py  bt_node.py  bt_nodes_loader.py  constants.py
physical_ai_tools/physical_ai_bt/trees/: ffw_sg2_rev1.xml
physical_ai_tools/physical_ai_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
physical_ai_tools/physical_ai_interfaces/msg/: BrowserItem.msg  DatasetInfo.msg  HFOperationStatus.msg  TaskStatus.msg  TrainingInfo.msg  TrainingStatus.msg
physical_ai_tools/physical_ai_interfaces/srv/: BrowseFile.srv  ControlHfServer.srv  EditDataset.srv  GetDatasetInfo.srv  GetDatasetList.srv  GetHFUser.srv  GetImageTopicList.srv  GetModelWeightList.srv  GetPolicyList.srv  GetRobotTypeList.srv  GetSavedPolicyList.srv  GetTrainingInfo.srv  GetUserList.srv  SendCommand.srv  SendTrainingCommand.srv  SetHFUser.srv  SetRobotType.srv
robotis_applications/robotis_applications/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+481 files in other folders)
