<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission</name>
  <version>0.1.0</version>
  <description>System 팀 휴머노이드 챌린지 미션 시나리오 (Mission A 상태 기계)</description>
  <maintainer email="mnjihun@snu.ac.kr">jihun</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- /detections 구독 시 필요. 메시지 패키지 빌드 후 활성 -->
  <exec_depend>perception_part_detector</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
