<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>physical_ai_bt</name>
  <version>0.8.3</version>
  <description>
    Python-based Behavior Tree for Physical AI
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>
  <author email="kimsw@robotis.com">Seongwoo Kim</author>
  <depend>rclpy</depend>
  <depend>physical_ai_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
