<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>physical_ai_interfaces</name>
  <version>0.8.3</version>
  <description>
    ROS 2 interfaces for Physical AI tools
  </description>

  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>
  <author email="kdy@robotis.com">Dongyun Kim</author>
  <author email="pkw@robotis.com">Kiwoong Park</author>
  <author email="kimsw@robotis.com">Seongwoo Kim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
